--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -39,6 +39,17 @@
       <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     </div>
     </div>
+
+    <br>
+    <h1 id="title"></h1>
+    <h3 id="host"></h3>
+    <button type="submit" class="btn btn-dark" id="btnEmailRecipe" name="btnEmailRecipe">Email Recipe</button>
+
+    <div class="container" style="display: flex; height: 100px;">
+      <div id="ingredients-list" style="width: 50%;"></div>
+      <div id="instructions-list" style="flex-grow: 1;">
+    </div>
+
   </body>
   
 <script src="../js/parse.js"></script>
