--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -43,6 +43,7 @@
     <br>
     <h1 id="title"></h1>
     <h3 id="host"></h3>
+
     <button type="submit" class="btn btn-dark" id="btnEmailRecipe" name="btnEmailRecipe">Email Recipe</button>
 
     <div class="container" style="display: flex; height: 100px;">
@@ -53,3 +54,5 @@
   </body>
   
 <script src="../js/parse.js"></script>
+  
+<script src="../js/email.js"></script>
