--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -43,9 +43,11 @@
     <br>
     <h1 id="title"></h1>
     <h3 id="host"></h3>
-
+    <br>
     <button type="submit" class="btn btn-dark" id="btnEmailRecipe" name="btnEmailRecipe">Email Recipe</button>
-
+    <br>
+    <button type="submit" class="btn btn-dark" id="btnSaveRecipe" name="btnSaveRecipe">Save Recipe</button>
+    <br>
     <div class="container" style="display: flex; height: 100px;">
       <div id="ingredients-list" style="width: 50%;"></div>
       <div id="instructions-list" style="flex-grow: 1;">
@@ -54,5 +56,5 @@
   </body>
   
 <script src="../js/parse.js"></script>
-  
+<script src="../js/save.js"></script>
 <script src="../js/email.js"></script>
