--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -26,7 +26,17 @@
 
   <body>
     <h1>NO BULL RECIPES</h1>
-    <h3>Paste a URL:</h3>
+    <h2>{{user}}</h2>
+    <br>
+
+
+    <form action="my-saved-recipes" method="get">
+      <input type="submit" value="My Saved Recipes" 
+          name="Submit" id="frm1_submit" />
+    </form>
+    
+    <br>
+    <br>
     <div class="jumbotron text-center">
     <div class="container">
       <form>
@@ -48,8 +58,10 @@
     <br>
     <button type="submit" class="btn btn-dark" id="btnSaveRecipe" name="btnSaveRecipe">Save Recipe</button>
     <br>
+
     <div class="container" style="display: flex; height: 100px;">
-      <div id="ingredients-list" style="width: 50%;"></div>
+      <div id="ingredients-list" style="width: 50%;">
+      </div>
       <div id="instructions-list" style="flex-grow: 1;">
     </div>
 
