my-saved-recipes

--- a/views/my-saved-recipes.handlebars
+++ b/views/my-saved-recipes.handlebars
@@ -1,3 +1,13 @@
 <body>
 <h1>My Recipes</h1>
+{{!-- {{#each recipes}} --}}
+<ul>
+    {{#each recipes}}
+    <li>
+        <button type="submit" class="btnSavedRecipe">{{this.host}}</button>
+    </li>
+    {{/each}}
+</ul>
 </body>
+
+<script src="../js/getSavedRecipe.js"></script>
