--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -26,9 +26,9 @@
 
   <body>
     <h1>NO BULL RECIPES</h1>
-    <h2>{{user}}</h2>
+    <h2 hidden id='username'>{{username}}</h2>
     <br>
-
+   {{!-- <button type="submit" class="btn btn-dark" id="btnMyRecipes" name="btnMyRecipes">My Saved Recipe</button> --}}
 
     <form action="my-saved-recipes" method="get">
       <input type="submit" value="My Saved Recipes" 
@@ -70,3 +70,4 @@
 <script src="../js/parse.js"></script>
 <script src="../js/save.js"></script>
 <script src="../js/email.js"></script>
+<script src="../js/myRecipes.js"></script>
