--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -25,8 +25,8 @@
 
 
   <body>
-    <h1>NO BULL RECIPES</h1>
-    <h2 hidden id='username'>{{username}}</h2>
+    <h1 class="title-header">NO BULL RECIPES</h1>
+    <h2 hidden id='username'>{{user}}</h2>
     <br>
    {{!-- <button type="submit" class="btn btn-dark" id="btnMyRecipes" name="btnMyRecipes">My Saved Recipe</button> --}}
 
@@ -42,9 +42,15 @@
       <form>
         <div class="form-group">
         <label>URL</label>
-        <input type="text" class="form-control" name="recipeURL" id="recipeURL">
-        </div>      
-          <button type="submit" class="btn btn-dark" id="btnGetRecipe" name="btnGetRecipe">Get Recipe</button>
+        
+        {{#if url}}
+        <input type="text" class="form-control" name="recipeURL" id="recipeURL" value="{{url}}">
+        {{else}}
+         <input type="text" class="form-control" name="recipeURL" id="recipeURL">
+        {{/if}}
+
+        </div>    
+          <button type="submit" class="btn btn-dark" id="btnGetRecipe" name="btnGetRecipe" >Get Recipe</button>
       </form>
       <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     </div>
@@ -62,7 +68,7 @@
     <div class="container" style="display: flex; height: 100px;">
       <div id="ingredients-list" style="width: 50%;">
       </div>
-      <div id="instructions-list" style="flex-grow: 1;">
+      <div id="instructions-list" style="width: 50%;">
     </div>
 
   </body>
@@ -71,3 +77,4 @@
 <script src="../js/save.js"></script>
 <script src="../js/email.js"></script>
 <script src="../js/myRecipes.js"></script>
+<script src="../js/getSavedRecipe.js"></script>
