--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    {{!-- <link rel="stylesheet" href="/styles/styles.css"> --}}
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <title>No Bull Recipes</title>
   </head>
