implemented delete operations

--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -2,33 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    {{!-- <link rel="stylesheet" href="/styles/styles.css"> --}}
+    {{!-- <link rel="stylesheet" href="../public/css/styles.css"> --}}
     <title>Your page title</title>
   </head>
-
-  {{!-- <body>
-    <h1>NO BULL RECIPES</h1>
-    <h3>Paste a URL:</h3>
-    <div class="jumbotron text-center">
-    <div class="container">
-       <form>
-                <div class="form-group">
-                <label>URL</label>
-                <input type="text" class="form-control" name="url">
-                </div>      
-                  <button type="submit" class="btn btn-dark">Get Recipe</button>
-                </form>
-    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
-    </div>
-    </div>
-  </body> --}}
-
 
   <body>
     <h1 class="title-header">NO BULL RECIPES</h1>
     <h2 hidden id='username'>{{user}}</h2>
     <br>
-   {{!-- <button type="submit" class="btn btn-dark" id="btnMyRecipes" name="btnMyRecipes">My Saved Recipe</button> --}}
 
     <form action="my-saved-recipes" method="get">
       <input type="submit" value="My Saved Recipes" 
@@ -37,24 +18,43 @@
     
     <br>
     <br>
-    <div class="jumbotron text-center">
-    <div class="container">
-      <form>
-        <div class="form-group">
-        <label>URL</label>
-        
-        {{#if url}}
-        <input type="text" class="form-control" name="recipeURL" id="recipeURL" value="{{url}}">
-        {{else}}
-         <input type="text" class="form-control" name="recipeURL" id="recipeURL">
-        {{/if}}
 
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+          <div class="input-group">
+          {{#if url}}
+            <input type="text" class="form-control" name="recipeURL" id="recipeURL" value="{{url}}">
+          {{else}}
+            <input type="text" class="form-control" name="recipeURL" id="recipeURL">
+          {{/if}}
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-dark" id="btnGetRecipe" name="btnGetRecipe" >Get Recipe</button>
+          </span>     
         </div>    
-          <button type="submit" class="btn btn-dark" id="btnGetRecipe" name="btnGetRecipe" >Get Recipe</button>
+
+        </div>
+      </div>
+    </div>
+
+
+
+    {{!-- <div class="container">
+      <form>
+        <div class="input-group">
+          {{#if url}}
+            <input type="text" class="form-control" name="recipeURL" id="recipeURL" value="{{url}}">
+          {{else}}
+            <input type="text" class="form-control" name="recipeURL" id="recipeURL">
+          {{/if}}
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-dark" id="btnGetRecipe" name="btnGetRecipe" >Get Recipe</button>
+          </span>     
+        </div>    
       </form>
       <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
-    </div>
-    </div>
+    </div> --}}
 
     <br>
     <h1 id="title"></h1>
@@ -64,6 +64,18 @@
     <br>
     <button type="submit" class="btn btn-dark" id="btnSaveRecipe" name="btnSaveRecipe">Save Recipe</button>
     <br>
+    
+    {{!-- {{#if recipeNotes}}
+      <h4>Recipe Notes:</h4>
+      <div class="container" style="display: flex; height: 100px;">
+        <p id="recipeNotes-display" style="width: 50%;">{{recipeNotes}}</p>
+      </div>  
+    {{else}}
+      <div class="container" style="display: flex; height: 100px;">
+        <p id="recipeNotes-display" style="width: 50%;"></p>
+      </div> 
+    {{/if}}  --}}
+    
 
     <div class="container" style="display: flex; height: 100px;">
       <div id="ingredients-list" style="width: 50%;">
@@ -71,6 +83,38 @@
       <div id="instructions-list" style="width: 50%;">
     </div>
 
+    <div id="test"></div>
+
+
+
+
+
+
+
+
+
+
+  <!-- Modal HTML -->
+  <div id="saveModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="material-icons">&#xe161</i>
+          </div>						
+          <h4 class="modal-title w-100"></h4>	
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <textarea rows="4" cols="35" id="recipeNotes">Enter recipe notes here...</textarea>
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-success" id="btnSaveConfirm">Save Recipe</button>
+        </div>
+      </div>
+    </div>
+  </div>     
   </body>
   
 <script src="../js/parse.js"></script>
