--- a/views/my-saved-recipes.handlebars
+++ b/views/my-saved-recipes.handlebars
@@ -1,16 +1,62 @@
+
 <body>
 <h1>My Recipes</h1>
 {{!-- {{#each recipes}} --}}
-<ul>
-    {{#each recipes}}
-    <li>
-        <form action="secrets" method="post">
-            <input type="hidden" name="url" value="{{this.url}}">
-            <button class="btnSavedRecipe" type="submit">{{this.title}}</button>
-        </form>
-    </li>
-    {{/each}}
-</ul>
-</body>
 
-{{!-- <script src="../js/getSavedRecipe.js"></script> --}}
+<table class="table table-sm table-hover" id="savedRecipesTable">
+    <thead>
+        <tr>
+            <th scope="col">Recipe</th>
+            <th scope="col">Source</th>
+            <th scope="col">Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each recipes}}
+        <tr id="{{this._id}}">
+            <td>
+                <form action="secrets" method="post">
+                    <input type="hidden" name="url" value="{{this.url}}">
+                    <input type="hidden" name="recipeNotes" value="{{this.recipeNotes}}">
+                    <button class="btnSavedRecipe" type="submit">{{this.title}}</button>
+                </form>
+            </td>
+            <td>
+                {{this.host}}
+            </td>
+            <td>
+               <a href="#myModal" class="delete" data-toggle="modal" data-name="{{this.title}}"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+            </td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
+
+
+
+
+<!-- Modal HTML -->
+<div id="myModal" class="modal fade">
+	<div class="modal-dialog modal-confirm">
+		<div class="modal-content">
+			<div class="modal-header flex-column">
+				<div class="icon-box">
+					<i class="material-icons">&#xE5CD;</i>
+				</div>						
+				<h4 class="modal-title w-100">Are you sure?</h4>	
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			</div>
+			<div class="modal-body">
+				<p></p>
+			</div>
+			<div class="modal-footer justify-content-center">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" id="btnDeleteConfirm">Delete</button>
+			</div>
+		</div>
+	</div>
+</div>     
+
+
+</body>
+<script src="../js/deleteRecipe.js"></script>
