--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -7,23 +7,44 @@
   </head>
 
   <body>
-    <h1 class="title-header">NO BULL RECIPES</h1>
-    <h2 hidden id='username'>{{user}}</h2>
-    <br>
-
-    <form action="my-saved-recipes" method="get">
-      <input type="submit" value="My Saved Recipes" 
-          name="Submit" id="frm1_submit" />
-    </form>
-    
-    <br>
-    <br>
-
-
     <div class="container">
+      <div class="row mt-3">
+        <div class="col offset-md-10">
+            <form  action="my-saved-recipes" method="get">
+              <input class="my-saved-recipes" type="submit" value="My Saved Recipes" name="Submit"/>
+            </form> 
+          </div>
+        </div>
+    </div>
+
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="title-header"><a href="/secrets">NO BULL RECIPES</a></h1>
+      <h2 hidden id='username'>{{user}}</h2>
+    </div>
+  </div>
+
+  <br>
+  <br>
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <div class="input-group mb-3">
+          {{#if url}}
+          <input type="text" class="form-control" name="recipeURL" id="recipeURL" aria-label="Paste recipe URL..." aria-describedby="button-addon2"  value="{{url}}">
+          {{else}}
+          <input type="text" class="form-control" name="recipeURL" id="recipeURL" placeholder="Paste recipe URL here..." aria-label="Paste recipe URL..." aria-describedby="button-addon2"  value="{{url}}">
+          {{/if}}
+          <button class="btn btn-outline-secondary" type="submit" id="btnGetRecipe">Get Recipe</button>
+        </div>
+      </div>
+    </div>
+  </div>
+    {{!-- <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
-          <div class="input-group">
+          <div class="input-group ">
           {{#if url}}
             <input type="text" class="form-control" name="recipeURL" id="recipeURL" value="{{url}}">
           {{else}}
@@ -36,7 +57,7 @@
 
         </div>
       </div>
-    </div>
+    </div> --}}
 
 
 
@@ -57,14 +78,28 @@
     </div> --}}
 
     <br>
-    <h1 id="title"></h1>
-    <h3 id="host"></h3>
+    <div class="container" id="recipe-title-host">
+      <div class="row">
+        <div class="col offset-md-1">
+          <h1 id="title"></h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col offset-md-1">
+          <h3 id="host"></h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col offset-md-1">
+          <button type="submit" id="btnEmailRecipe" name="btnEmailRecipe"><i class="material-icons md-36">&#xe158</i></button>
+          <button type="submit" id="btnSaveRecipe" name="btnSaveRecipe"><i class="material-icons md-36">&#xe161</i></button>
+        </div>
+      </div>
+    </div>
     <br>
-    <button type="submit" class="btn btn-dark" id="btnEmailRecipe" name="btnEmailRecipe">Email Recipe</button>
-    <br>
-    <button type="submit" class="btn btn-dark" id="btnSaveRecipe" name="btnSaveRecipe">Save Recipe</button>
-    <br>
-    
     {{!-- {{#if recipeNotes}}
       <h4>Recipe Notes:</h4>
       <div class="container" style="display: flex; height: 100px;">
@@ -76,14 +111,19 @@
       </div> 
     {{/if}}  --}}
     
+        
 
-    <div class="container" style="display: flex; height: 100px;">
-      <div id="ingredients-list" style="width: 50%;">
+    <div class="container" id="list-container">
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <div id="ingredients-list"></div>
+        </div>
+        <div class="col-6">
+          <div id="instructions-list"></div>
+        </div>
       </div>
-      <div id="instructions-list" style="width: 50%;">
     </div>
 
-    <div id="test"></div>
 
 
 
@@ -91,9 +131,7 @@
 
 
 
-
-
-
+  </body>
   <!-- Modal HTML -->
   <div id="saveModal" class="modal fade">
     <div class="modal-dialog modal-confirm">
@@ -103,19 +141,42 @@
             <i class="material-icons">&#xe161</i>
           </div>						
           <h4 class="modal-title w-100"></h4>	
-                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
         <div class="modal-body">
           <textarea rows="4" cols="35" id="recipeNotes">Enter recipe notes here...</textarea>
         </div>
         <div class="modal-footer justify-content-center">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-success" id="btnSaveConfirm">Save Recipe</button>
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-outline-success" id="btnSaveConfirm">Save Recipe</button>
         </div>
       </div>
     </div>
   </div>     
   </body>
+
+  <!-- Modal HTML -->
+  <div id="emailModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="material-icons">&#xe158</i>
+          </div>						
+          <h4 class="modal-title w-100"></h4>	
+                  <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <input type="text" class="form-control"  id="email" value="{{user}}">
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-outline-success" id="btnEmailConfirm">Email Recipe</button>
+        </div>
+      </div>
+    </div>
+  </div>     
+
   
 <script src="../js/parse.js"></script>
 <script src="../js/save.js"></script>
