--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -96,6 +96,7 @@
         <div class="col offset-md-1">
           <button type="submit" id="btnEmailRecipe" name="btnEmailRecipe"><i class="material-icons md-36">&#xe158</i></button>
           <button type="submit" id="btnSaveRecipe" name="btnSaveRecipe"><i class="material-icons md-36">&#xe161</i></button>
+          <button type="submit" id="btnGetSimilarRecipes" name="btnGetSimilarRecipes"><i class="material-icons md-36">&#xe8b6</i></button>
         </div>
       </div>
     </div>
@@ -132,6 +133,8 @@
 
 
   </body>
+
+  
   <!-- Modal HTML -->
   <div id="saveModal" class="modal fade">
     <div class="modal-dialog modal-confirm">
@@ -177,7 +180,52 @@
     </div>
   </div>     
 
-  
+
+  <!-- Modal HTML -->
+  <div id="similarRecipesModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="material-icons">&#xe8b6</i>
+          </div>						
+          <h4 class="modal-title w-100"></h4>	
+                  <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <input type="text" class="form-control" name="recipeQuery" id="recipeQuery">
+          <table class="table table-sm" id="savedRecipesTable">
+            <table>
+              <tbody>
+                  {{#each recipes}}
+                  <tr id="{{this._id}}">
+                      <td>
+                          <form action="secrets" method="post">
+                              <input type="hidden" name="url" value="{{this.url}}">
+                              <input type="hidden" name="recipeNotes" value="{{this.recipeNotes}}">
+                              <button class="btnSavedRecipe" type="submit">{{this.title}}</button>
+                          </form>
+                      </td>
+                      <td>
+                          {{this.host}}
+                      </td>
+                      <td id="td-delete">
+                        <a href="#myModal" class="delete" data-toggle="modal" data-name="{{this.title}}"><i class="material-icons md-24" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                      </td>
+                  </tr>
+                  {{/each}}
+              </tbody>
+          </table>
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-outline-success" id="btnQueryConfirm">Find Similar</button>
+        </div>
+      </div>
+    </div>
+  </div>     
+
+<script src="../js/getSimilarRecipes.js"></script>
 <script src="../js/parse.js"></script>
 <script src="../js/save.js"></script>
 <script src="../js/email.js"></script>
