change request header

--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -196,8 +196,8 @@
           <input type="text" class="form-control" name="recipeQuery" id="recipeQuery">
           <table class="table table-sm" id="savedRecipesTable">
             <table>
-              <tbody>
-                  {{#each recipes}}
+              <tbody id="tbody-similarRecipes">
+                  {{!-- {{#each recipes}}
                   <tr id="{{this._id}}">
                       <td>
                           <form action="secrets" method="post">
@@ -213,7 +213,7 @@
                         <a href="#myModal" class="delete" data-toggle="modal" data-name="{{this.title}}"><i class="material-icons md-24" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                       </td>
                   </tr>
-                  {{/each}}
+                  {{/each}} --}}
               </tbody>
           </table>
         </div>
