--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,8 +6,65 @@
     <title>Your page title</title>
   </head>
   <body>
+<!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
 
-    <div class="container mt-5">
+<body>
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="title-header"><a href="/secrets">NO BULL RECIPES</a></h1>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card my-5">
+            <div class="card-body p-4 p-sm-5">
+                <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
+
+                <form action="/login" method="POST">
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+
+                <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
+                    <label class="form-check-label" for="rememberPasswordCheck">
+                    Remember password
+                    </label>
+                </div>
+                <div class="d-grid mb-2">
+                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
+                    in</button>
+                </div>
+                
+                <div class="d-grid">
+                    <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
+                    <i class="fab fa-google me-2"></i> Sign in with Google
+                    </button>
+                </div>
+                
+                <hr class="my-4">
+                <div class="d-grid mb-2">
+                    <a class="btn btn-register btn-login text-uppercase fw-bold" href="/register" role="button">Register</a>
+                </div>
+
+
+                </form>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</body>
+
+    {{!-- <div class="container mt-5">
     <h1>NO BULL RECIPES</h1>
     <br>
     <h2>Login:</h2>
@@ -47,6 +104,5 @@
         <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
 
     </div>
-    </div>
-</body>
+    </div> --}}
 
