--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -6,6 +6,49 @@
     <title>Your page title</title>
   </head>
   <body>
+
+      <div class="container">
+        <div class="jumbotron">
+            <h1 class="title-header"><a href="/secrets">NO BULL RECIPES</a></h1>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card my-5">
+            <div class="card-body p-4 p-sm-5">
+                <h5 class="card-title text-center mb-5 fw-light fs-5">Register</h5>
+
+                    <form  action="/register" method="POST">
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
+                            <label for="floatingInput">Email address</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+                            <label for="floatingPassword">Password</label>
+                        </div>
+
+                        <div class="d-grid mb-2">
+                            <button class="btn btn-register btn-login text-uppercase fw-bold" type="submit">Register</button>
+                        </div>
+                        
+                    </form>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+
+
+
+{{!-- 
+
+
     <div class="container mt-5">
     <h1>Register</h1>
 
@@ -44,5 +87,5 @@
         </div>
 
     </div>
-    </div>
+    </div> --}}
 </body>
