--- a/views/secrets.handlebars
+++ b/views/secrets.handlebars
@@ -11,7 +11,7 @@
       <div class="row mt-3">
         <div class="col offset-md-10">
             <form  action="my-saved-recipes" method="get">
-              <input class="my-saved-recipes" type="submit" value="My Saved Recipes" name="Submit"/>
+              <input class="my-saved-recipes" type="submit" value="My Cookbook" name="Submit"/>
             </form> 
           </div>
         </div>
@@ -94,23 +94,31 @@
     <div class="container">
       <div class="row">
         <div class="col offset-md-1">
-          <button type="submit" id="btnEmailRecipe" name="btnEmailRecipe"><i class="material-icons md-36">&#xe158</i></button>
-          <button type="submit" id="btnSaveRecipe" name="btnSaveRecipe"><i class="material-icons md-36">&#xe161</i></button>
-          <button type="submit" id="btnGetSimilarRecipes" name="btnGetSimilarRecipes"><i class="material-icons md-36">&#xe8b6</i></button>
+          <button type="submit" id="btnEmailRecipe" name="btnEmailRecipe" title="Email this recipe"><i class="material-icons md-36">&#xe158</i></button>
+          <button type="submit" id="btnSaveRecipe" name="btnSaveRecipe" title="Save this recipe to your cookbook"><i class="material-icons md-36">&#xe161</i></button>
+          <button type="submit" id="btnGetSimilarRecipes" name="btnGetSimilarRecipes" title="Search for similar recipes"><i class="material-icons md-36">&#xe8b6</i></button>
         </div>
       </div>
     </div>
     <br>
-    {{!-- {{#if recipeNotes}}
-      <h4>Recipe Notes:</h4>
-      <div class="container" style="display: flex; height: 100px;">
-        <p id="recipeNotes-display" style="width: 50%;">{{recipeNotes}}</p>
-      </div>  
-    {{else}}
-      <div class="container" style="display: flex; height: 100px;">
-        <p id="recipeNotes-display" style="width: 50%;"></p>
-      </div> 
-    {{/if}}  --}}
+
+    <div class="container"  id="recipe-title-host">
+      <div class="row">
+        <div class="col offset-md-1">
+             {{#if recipeNotes}}
+              <h4>Recipe Notes:</h4>
+              <div class="container" style="display: flex; height: 100px;">
+                <p id="recipeNotes-display" style="width: 50%;">{{recipeNotes}}</p>
+              </div>  
+            {{else}}
+              <div class="container" style="display: flex; height: 100px;">
+                <p id="recipeNotes-display" style="width: 50%;"></p>
+              </div> 
+            {{/if}} 
+        </div>
+      </div>
+    </div>
+ 
     
         
 
@@ -142,7 +150,7 @@
         <div class="modal-header flex-column">
           <div class="icon-box">
             <i class="material-icons">&#xe161</i>
-          </div>						
+          </div>
           <h4 class="modal-title w-100"></h4>	
                   <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
@@ -181,45 +189,44 @@
   </div>     
 
 
-  <!-- Modal HTML -->
+  <!-- Similar Recipes Modal HTML -->
   <div id="similarRecipesModal" class="modal fade">
-    <div class="modal-dialog modal-confirm">
+    <div class="modal-dialog modal-confirm" style="width: 80%;" role="document">
       <div class="modal-content">
         <div class="modal-header flex-column">
           <div class="icon-box">
             <i class="material-icons">&#xe8b6</i>
           </div>						
-          <h4 class="modal-title w-100"></h4>	
-                  <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+
+
+          <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title w-100">Find Similar Recipes</h4>	
+          <hr style="color: transparent;">
+
+          <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-12">
+                  <div class="input-group mb-3">
+
+                    <input type="text" class="form-control" name="recipeQuery" id="recipeQuery">
+
+                    <button type="button" class="btn btn-outline-success" id="btnQueryConfirm">Find Similar</button>
+
+                  </div>
+              </div>
+            </div>
+
         </div>
+
         <div class="modal-body">
-          <input type="text" class="form-control" name="recipeQuery" id="recipeQuery">
-          <table class="table table-sm" id="savedRecipesTable">
-            <table>
-              <tbody id="tbody-similarRecipes">
-                  {{!-- {{#each recipes}}
-                  <tr id="{{this._id}}">
-                      <td>
-                          <form action="secrets" method="post">
-                              <input type="hidden" name="url" value="{{this.url}}">
-                              <input type="hidden" name="recipeNotes" value="{{this.recipeNotes}}">
-                              <button class="btnSavedRecipe" type="submit">{{this.title}}</button>
-                          </form>
-                      </td>
-                      <td>
-                          {{this.host}}
-                      </td>
-                      <td id="td-delete">
-                        <a href="#myModal" class="delete" data-toggle="modal" data-name="{{this.title}}"><i class="material-icons md-24" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                      </td>
-                  </tr>
-                  {{/each}} --}}
-              </tbody>
-          </table>
+            <table class="table" id="similarRecipesTable">
+              <tbody id="tbody-similarRecipes"></tbody>  
+            </table>
         </div>
-        <div class="modal-footer justify-content-center">
-          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-outline-success" id="btnQueryConfirm">Find Similar</button>
+
+          <div class="modal-footer justify-content-center">
+            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+          </div>
         </div>
       </div>
     </div>
