--- a/views/my-saved-recipes.handlebars
+++ b/views/my-saved-recipes.handlebars
@@ -49,14 +49,18 @@
 					<i class="material-icons">&#xE5CD;</i>
 				</div>						
 				<h4 class="modal-title w-100">Are you sure?</h4>	
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
 			</div>
 			<div class="modal-body">
 				<p></p>
 			</div>
+
+          
 			<div class="modal-footer justify-content-center">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="btnDeleteConfirm">Delete</button>
+
+				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+
+				<button type="button" class="btn btn-outline-danger" id="btnDeleteConfirm">Delete</button>
 			</div>
 		</div>
 	</div>
