updated query statements

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="title-header"><a href="/secrets">NO BULL RECIPES</a></h1>
+            <h1 class="title-header"><a href="/login">NO BULL RECIPES</a></h1>
         </div>
     </div>
     <br>
