--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,14 +1,184 @@
-  <body>
-    <div class="jumbotron centered">
-    <div class="container">
-        <i class="fas fa-key fa-6x"></i>
-        <h1 class="display-3">Secrets</h1>
-        <p class="lead">Don't keep your secrets, share them anonymously!</p>
-        <hr>
-        <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-        <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Your page title</title>
+  </head>
 
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="title-header"><a href="/secrets">NO BULL RECIPES</a></h1>
+        <h2 hidden id='username'>{{user}}</h2>
+      </div>
     </div>
+
+    <br>
+    <br>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <div class="input-group mb-3">
+            {{#if url}}
+            <input type="text" class="form-control" name="recipeURL" id="recipeURL" aria-label="Paste recipe URL..." aria-describedby="button-addon2"  value="{{url}}">
+            {{else}}
+            <input type="text" class="form-control" name="recipeURL" id="recipeURL" placeholder="Paste recipe URL here..." aria-label="Paste recipe URL..." aria-describedby="button-addon2"  value="{{url}}">
+            {{/if}}
+            <button class="btn btn-outline-secondary" type="submit" id="btnGetRecipe">Get Recipe</button>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <br>
+    <div class="container" id="recipe-title-host">
+      <div class="row">
+        <div class="col offset-md-1">
+          <h1 id="title"></h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col offset-md-1">
+          <h3 id="host"></h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="container" id="action-icons">
+      <div class="row">
+        <div class="col offset-md-1">
+          <button type="submit" id="btnEmailRecipe" name="btnEmailRecipe" title="Email this recipe"><i class="material-icons md-36">&#xe158</i></button>
+          <button type="submit" id="btnSaveRecipe" name="btnSaveRecipe" title="Save this recipe to your cookbook"><i class="material-icons md-36">&#xe161</i></button>
+          <button type="submit" id="btnGetSimilarRecipes" name="btnGetSimilarRecipes" title="Search for similar recipes"><i class="material-icons md-36">&#xe8b6</i></button>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <div class="container" id="container-recipeNotes">
+      <div class="row">
+        <div class="col-4 offset-md-1">
+
+          {{#if recipeNotes}}
+          <h6>Recipe Notes:</h6>
+          <div id="recipeNotes">
+            <p id="recipeNotes-display">{{recipeNotes}}</p>
+          </div> 
+          <hr style="color:transparent;">
+          <hr style="color:transparent;">
+
+          {{else}}
+            <h6 id="recipeNotes-title"></h6>
+            <div id="recipeNotes">
+              <p id="recipeNotes-display"></p>
+            </div> 
+          {{/if}} 
+        </div>  
+      </div>
+    </div>
+  
+    <div class="container" id="list-container">
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <div id="ingredients-list"></div>
+        </div>
+        <div class="col-6">
+          <div id="instructions-list"></div>
+        </div>
+      </div>
+    </div>
+
   </body>
-</html>
+  
+  <!-- Save Recipe Modal -->
+  <div id="saveModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="material-icons">&#xe161</i>
+          </div>
+            <h4 class="modal-title w-100"></h4>	
+            <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+          <h6 class="recipe-title-source"></h6>
+
+        <div class="modal-body">
+          <textarea rows="4" cols="35" id="modal-recipeNotes"></textarea>
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-outline-success" id="btnSaveConfirm">Save Recipe</button>
+        </div>
+      </div>
+    </div>
+  </div>     
+
+  <!-- Email Recipe Modal -->
+  <div id="emailModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="material-icons">&#xe158</i>
+          </div>						
+          <h4 class="modal-title w-100"></h4>	
+                  <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title w-100">Email Recipe</h4>	
+        </div>
+        <div class="modal-body">
+          <input type="text" class="form-control"  id="email" value="{{user}}">
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-outline-success" id="btnEmailConfirm">Email Recipe</button>
+        </div>
+      </div>
+    </div>
+  </div>     
+
+  <!-- Similar Recipes Modal -->
+  <div id="similarRecipesModal" class="modal fade">
+    <div class="modal-dialog modal-confirm" style="width: 80%;" role="document">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="material-icons">&#xe8b6</i>
+          </div>						
+          <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title w-100">Find Similar Recipes</h4>	
+          <hr style="color: transparent;">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12">
+                <div class="input-group mb-3">
+
+                  <input type="text" class="form-control" name="recipeQuery" id="recipeQuery">
+
+                  <button type="button" class="btn btn-outline-success" id="btnQueryConfirm">Find Similar</button>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <div class="modal-body">
+            <table class="table" id="similarRecipesTable">
+              <tbody id="tbody-similarRecipes"></tbody>  
+            </table>
+        </div>
+
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>     
+
+<script src="../js/getSimilarRecipes.js"></script>
+<script src="../js/parse.js"></script>
+<script src="../js/save.js"></script>
+<script src="../js/email.js"></script>
+<script src="../js/myRecipes.js"></script>
+<script src="../js/getSavedRecipe.js"></script>
