--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="title-header"><a href="/secrets">NO BULL RECIPES</a></h1>
+        <h1 class="title-header"><a href="/home">NO BULL RECIPES</a></h1>
         <h2 hidden id='username'>{{user}}</h2>
       </div>
     </div>
