--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,10 +27,10 @@
                         <a class="nav-link" href="logout"><i class="material-icons md-28" id="navbar-icon">&#xe9ba</i>Logout</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="secrets"><i class="material-icons md-28" id="navbar-icon">&#xe88a</i>Home</a>
+                        <a class="nav-link" href="home"><i class="material-icons md-28" id="navbar-icon">&#xe88a</i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="my-saved-recipes"><i class="material-icons md-28" id="navbar-icon">&#xe8ef</i>My Cookbook</a>
+                        <a class="nav-link" href="my-cookbook"><i class="material-icons md-28" id="navbar-icon">&#xe8ef</i>My Cookbook</a>
                     </li>
                 </ul>
             </div>
