--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,7 @@ body {
 	background-color: transparent;
 	color:#c5c5c7;
 	border-radius: 5px;
-	border-color: #0091b569;
+	border-color: transparent;
 	font-family: Helvetica, Arial, sans-serif;
 }
 .btn-login {
@@ -45,18 +45,11 @@ body {
 	padding: 0.75rem 1rem;
   }
 
-/* .btn-primary {
-	background-color: #c5c5c7;
-} */
-  .btn-google {
-	color: white !important;
-	background-color: #ea4335;
-  }
-  
-  .btn-register {
-	color: white !important;
-	background-color: #3b5998;
-  }
+.btn-danger {
+	background-color: rgb(173, 6, 48);
+	border-color: rgb(173, 6, 48);
+}
+
 
   .form-control {
 	display: inline-block;
