--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,8 +5,6 @@
     <link rel="stylesheet" href="/styles/styles.css">
     <title>Your page title</title>
   </head>
-  <body>
-<!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
 
 <body>
     <div class="container">
@@ -14,48 +12,63 @@
             <h1 class="title-header"><a href="/login">NO BULL RECIPES</a></h1>
         </div>
     </div>
+
     <br>
     <br>
+    
     <div class="container">
         <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-            <div class="card my-5">
+            <div class="card my-4">
             <div class="card-body p-4 p-sm-5">
-                <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
+                <h5 class="card-title text-center">Sign In</h5>
 
                 <form action="/login" method="POST">
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
-                    <label for="floatingInput">Email address</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
-                    <label for="floatingPassword">Password</label>
-                </div>
-
-                <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
-                    <label class="form-check-label" for="rememberPasswordCheck">
-                    Remember password
-                    </label>
-                </div>
-                <div class="d-grid mb-2">
-                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
-                    in</button>
-                </div>
                 
-                <div class="d-grid">
-                    <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
-                    <i class="fab fa-google me-2"></i> Sign in with Google
-                    </button>
-                </div>
-                
-                <hr class="my-4">
-                <div class="d-grid mb-2">
-                    <a class="btn btn-register btn-login text-uppercase fw-bold" href="/register" role="button">Register</a>
-                </div>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
+                        <label for="floatingInput">Email address</label>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+                        <label for="floatingPassword">Password</label>
+                    </div>
+
+                    <div class="d-grid mb-2">
+                        <button class="btn btn-success btn-login text-uppercase fw-bold" type="submit">Sign in</button>
+                    </div>
+
+                    
+                    <hr class="my-4">
+                    <div class="d-grid mb-2">
+                        <a class="btn btn-secondary btn-register btn-login text-uppercase fw-bold" href="/register" role="button">Register</a>
+                    </div>
+                </form>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
 
 
+
+    <div class="container">
+        <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card my-1">
+            <div class="card-body p-4 p-sm-5">
+                <h5 class="card-title text-center">Don't want to create an account?</h5>
+                <form action="/login-guest" method="POST">
+                    <div class="form-floating mb-3">
+                        <input type="hidden" class="form-control" id="floatingInput"  name="username" value="user@gmail.com">
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="hidden" class="form-control" id="floatingPassword" name="password" value="1234">
+                    </div>
+                    <div type="hidden" class="d-grid mb-2">
+                        <button class="btn btn-danger btn-login text-uppercase fw-bold" type="submit">Sign in as guest</button>
+                    </div>
                 </form>
             </div>
             </div>
