--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -59,12 +59,12 @@
             <div class="card my-1">
             <div class="card-body p-4 p-sm-5">
                 <h5 class="card-title text-center">Don't want to create an account?</h5>
-                <form action="/login-guest" method="POST">
+                <form action="/login" method="POST">
                     <div class="form-floating mb-3">
                         <input type="hidden" class="form-control" id="floatingInput"  name="username" value="user@gmail.com">
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="hidden" class="form-control" id="floatingPassword" name="password" value="1234">
+                        <input type="hidden" class="form-control" id="floatingPassword" name="password" value="password">
                     </div>
                     <div type="hidden" class="d-grid mb-2">
                         <button class="btn btn-danger btn-login text-uppercase fw-bold" type="submit">Sign in as guest</button>
